playground/generateFstar/transpiler/SimpleCalculatorGrammar.jjt
/**
 * Simple calculator JJTree file
 * 
 */
options
{
  STATIC = false; // parserクラスのメソッドをstaticにしない
  MULTI = true; // ASTXXXクラスを生成する
  VISITOR = true; // Visitorクラスを生成する
  UNICODE_INPUT = false; // ユニコードで解析を行わない（日本語等を使わない）
}

PARSER_BEGIN(SimpleCalculatorParser)
import java.util.List;
import java.util.ArrayList;
import java.io.InputStream;
import java.io.ByteArrayInputStream;

public class SimpleCalculatorParser
{
  
  
  public static void main(String [] args)
  {
    //   String generatedRefinementType = transpile("x > 0", "RefinementType");
    //   if (generatedRefinementType != null) {
    //     System.out.println(generatedRefinementType);
    //   }

      String generatedMethodDeclaration = transpile("int[] a(int b, float c, byte d[])\n", "MethodDeclaration");
      if (generatedMethodDeclaration != null) {
        System.out.println(generatedMethodDeclaration);
      }

      
  }

  public static String transpile(String s, String parseType) {

    InputStream input = new ByteArrayInputStream(s.getBytes());
    SimpleCalculatorParser parser = new SimpleCalculatorParser(input);

    SimpleCalculatorParserVisitor visitor = new SimpleCalculatorParserVisitorImpl();
    if (parseType == "RefinementType") {
        try {
            // parser.ConditionRoot().dump("");

            Object ret = parser.ConditionRoot().jjtAccept(visitor, null);

            if (ret instanceof String) {
                return (String)ret;
            } else {
                System.out.println("ret is not string");
                return "";
            }


        } catch (Exception e) {
            e.printStackTrace();
            return null;
        }
    } else if (parseType == "MethodDeclaration") {
        try {
            parser.MethodDeclarationRoot().dump("");

            input = new ByteArrayInputStream(s.getBytes());
            parser = new SimpleCalculatorParser(input);

            visitor = new SimpleCalculatorParserVisitorImpl();
            System.out.println("");
            Object ret = parser.MethodDeclarationRoot().jjtAccept(visitor, null);

            if (ret instanceof MethodDeclaration) {
                MethodDeclaration methodDeclaration = (MethodDeclaration) ret;
                System.out.println(methodDeclaration);
                return "";
            } else {
                System.out.println("ret is not methodDeclaration");
                return "";
            }

        } catch (Exception e) {
            e.printStackTrace();
            return null;
        }   
    }

    return null;
  }
}


PARSER_END(SimpleCalculatorParser)

SKIP :
{
  " "
| "\t"
| "\r"
}

TOKEN :
{
< RELATIONAL :
  ">"
  | ">="
  | "<"
  | "<="
>
| < EQUALITY : "==" | "!=" >
| < AND : "&&" >
| < OR : "||" >
| < OPEN_BRACKET : "(" >
| < CLOSE_BRACKET : ")" >
| < PLUSMINUS : "+" | "-" >
}

TOKEN : /* IDENTIFIERS */
{
  < IDENTIFIER: <LETTER> (<LETTER>|<DIGIT>)* >
|
  < #LETTER:
      [
       "\u0024",
       "\u0041"-"\u005a",
       "\u005f",
       "\u0061"-"\u007a",
       "\u00c0"-"\u00d6",
       "\u00d8"-"\u00f6",
       "\u00f8"-"\u00ff",
       "\u0100"-"\u1fff",
       "\u3040"-"\u318f",
       "\u3300"-"\u337f",
       "\u3400"-"\u3d2d",
       "\u4e00"-"\u9fff",
       "\uf900"-"\ufaff"
      ]
  >
|
  < #DIGIT:
      [
       "\u0030"-"\u0039",
       "\u0660"-"\u0669",
       "\u06f0"-"\u06f9",
       "\u0966"-"\u096f",
       "\u09e6"-"\u09ef",
       "\u0a66"-"\u0a6f",
       "\u0ae6"-"\u0aef",
       "\u0b66"-"\u0b6f",
       "\u0be7"-"\u0bef",
       "\u0c66"-"\u0c6f",
       "\u0ce6"-"\u0cef",
       "\u0d66"-"\u0d6f",
       "\u0e50"-"\u0e59",
       "\u0ed0"-"\u0ed9",
       "\u1040"-"\u1049"
      ]
  >
}



TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL:
        <DECIMAL_LITERAL> (["l","L"])?
      | <HEX_LITERAL> (["l","L"])?
      | <OCTAL_LITERAL> (["l","L"])?
  >
|
  < #DECIMAL_LITERAL: ["1"-"9"] (["0"-"9"])* >
|
  < #HEX_LITERAL: "0" ["x","X"] (["0"-"9","a"-"f","A"-"F"])+ >
|
  < #OCTAL_LITERAL: "0" (["0"-"7"])* >
|
  < FLOATING_POINT_LITERAL:
        (["0"-"9"])+ "." (["0"-"9"])* (<EXPONENT>)? (["f","F","d","D"])?
      | "." (["0"-"9"])+ (<EXPONENT>)? (["f","F","d","D"])?
      | (["0"-"9"])+ <EXPONENT> (["f","F","d","D"])?
      | (["0"-"9"])+ (<EXPONENT>)? ["f","F","d","D"]
  >
|
  < #EXPONENT: ["e","E"] (["+","-"])? (["0"-"9"])+ >
|
  < CHARACTER_LITERAL:
      "'"
      (   (~["'","\\","\n","\r"])
        | ("\\"
            ( ["n","t","b","r","f","\\","'","\""]
            | ["0"-"7"] ( ["0"-"7"] )?
            | ["0"-"3"] ["0"-"7"] ["0"-"7"]
            )
          )
      )
      "'"
  >
|
  < STRING_LITERAL:
      "\""
      (   (~["\"","\\","\n","\r"])
        | ("\\"
            ( ["n","t","b","r","f","\\","'","\""]
            | ["0"-"7"] ( ["0"-"7"] )?
            | ["0"-"3"] ["0"-"7"] ["0"-"7"]
            )
          )
      )*
      "\""
  >
}

SimpleNode ConditionRoot() :
{
}
{
  Expr() <EOF>
  {
    // Node tree = jjtree.rootNode();
    // System.out.println(tree.jjtGetChild(0));
    return jjtThis;
  }
}

void Expr() :
{
}
{
  ConditionalOrExpression()
}

void ConditionalOrExpression() :
{
  Token t = null;
}
{
    ConditionalAndExpression() (t = < OR > ConditionalAndExpression(){

    } )*
{
//   Node x =  jjtThis.jjtGetChild(0);
//   System.out.println(x);
}
}

void ConditionalAndExpression() :
{
//   List tokens = new ArrayList();
  Token t = null;
}
{
  EqualityExpression() (t = < AND > EqualityExpression()
  {

  } )*
{}
}

void EqualityExpression() :
{
  List<String> ts = new ArrayList();
  Token t = null;
}
{
  RelationalExpression() (t = < EQUALITY > RelationalExpression()
  {
    ts.add(t.image);
    jjtThis.jjtSetValue(ts);
  } )*
{}
}

void RelationalExpression() :
{
  List<String> ts = new ArrayList();
  Token t = null;
}
{
  AdditiveExpression() ( t = < RELATIONAL > AdditiveExpression()
  {
    ts.add(t.image);
    jjtThis.jjtSetValue(ts);
  } )*
{}
}

void AdditiveExpression() :
{
  Token t = null;
}
{
  t = < PLUSMINUS > PrimaryPrefix() {
      if (t.toString().equals("-")) {
        jjtThis.jjtSetValue(t.image);
      }
  }
|
  PrimaryPrefix()
}

void PrimaryPrefix() :
{
  Token t = null;
}
{
  Literal()
  |
  Name()  
  |
  < OPEN_BRACKET > Expr() < CLOSE_BRACKET >
}


void Literal() :
{
  Token t = null;
}
{
  Integer()
|
  Floating()
|
  Character()
|
  String()
|
  BooleanLiteral()
|
  NullLiteral()
}


void Name() :
/*
 * A lookahead of 2 is required below since "Name" can be followed
 * by a ".*" when used in the context of an "ImportDeclaration".
 */
{Token t = null;}
{
  t = <IDENTIFIER>
  ( LOOKAHEAD(2) "." <IDENTIFIER>
  )*
  {
    jjtThis.jjtSetValue(t.image);
  }
}

void Integer():
{Token t = null;}
{
 t = <INTEGER_LITERAL>
  {
    jjtThis.jjtSetValue(t.image);
  }
}

void Floating():
{Token t = null;}
{
  t = <FLOATING_POINT_LITERAL>
  {
    jjtThis.jjtSetValue(t.image);
  }
}

void Character():
{Token t = null;}
{
 t = <CHARACTER_LITERAL>
  {
    jjtThis.jjtSetValue(t.image);
  }
}

void String():
{Token t = null;}
{
 t = <STRING_LITERAL>
  {
    jjtThis.jjtSetValue(t.image);
  }
}

void BooleanLiteral() :
{
  Token t = null;
}
{
  t = "true" | "false"
  {
    jjtThis.jjtSetValue(t.image);
  }
}

void NullLiteral() :
{
  Token t = null;
}
{
  t = "null"
  {
    jjtThis.jjtSetValue(t.image);
  }
}

// Method

SimpleNode MethodDeclarationRoot() :
{
}
{
  MethodDeclaration() "\n"
  {
    // Node tree = jjtree.rootNode();
    // System.out.println(tree.jjtGetChild(0));
    return jjtThis;
  }
}

void PrimitiveType() :
{}
{
  BooleanType() 
|
  CharType()
|
  ByteType()
|
  ShortType()
|
  IntType()
|
  LongType()
|
  FloatType()
|
  DoubleType()
}

void PrimitiveBlacketType() :
{}
{
  BooleanBlacketType()
|
  CharBlacketType()
|
  ByteBlacketType()
|
  ShortBlacketType()
|
  IntBlacketType()
|
  LongBlacketType()
|
  FloatBlacketType()
|
  DoubleBlacketType()
}

void BooleanBlacketType():
{
    Token t = null;
}
{
    t = "boolean[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void CharBlacketType():
{
    Token t = null;
}
{
    t = "char[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void ByteBlacketType():
{
    Token t = null;
}
{
    t = "byte[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void ShortBlacketType():
{
    Token t = null;
}
{
    t = "short[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void IntBlacketType():
{
    Token t = null;
}
{
    t = "int[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }

}

void LongBlacketType():
{
    Token t = null;
}
{
    t = "long[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void FloatBlacketType():
{
    Token t = null;
}
{
    t = "float[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void DoubleBlacketType():
{
    Token t = null;
}
{
    t = "double[]"
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void BooleanType():
{
    Token t = null;
}
{
    t = "boolean "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void CharType():
{
    Token t = null;
}
{
    t = "char "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void ByteType():
{
    Token t = null;
}
{
    t = "byte "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void ShortType():
{
    Token t = null;
}
{
    t = "short "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void IntType():
{
    Token t = null;
}
{
    t = "int "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }

}

void LongType():
{
    Token t = null;
}
{
    t = "long "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void FloatType():
{
    Token t = null;
}
{
    t = "float "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}

void DoubleType():
{
    Token t = null;
}
{
    t = "double "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}


void Type() :
{}
{
  PrimitiveType() | PrimitiveBlacketType()
}

void VoidType():
{
    Token t = null;
}
{
    t = "void "
    {
        jjtThis.jjtSetValue(t.toString().trim());
    }
}


void ResultType() :
{
    Token t = null;
}
{
  VoidType() | Type()
}

void ArrayBrackets():
{
    Token t = null;
}
{
    t = "[]" 
    {
        jjtThis.jjtSetValue(t.image);
    }
}

void VariableDeclaratorId() :
{
    Token t = null;
}
{
  t = <IDENTIFIER> (ArrayBrackets()) *
  {
    jjtThis.jjtSetValue(t.image);
  }
}

void FormalParameter() :
{}
{
  Type() VariableDeclaratorId()
}


void FormalParameters() :
{}
{
  "(" [ FormalParameter() ( "," FormalParameter() )* ] ")"
}

void MethodDeclarator() :
{
    Token t = null;
}
{
  t = <IDENTIFIER>
  {
    jjtThis.jjtSetValue(t.image);
  } FormalParameters()
}


void MethodDeclaration() :
{}
{
  ResultType() MethodDeclarator()
}
